Added a gradient background to all current layouts

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#19A0DA</color>
-    <color name="colorPrimaryDark">#19A0DA</color>
+    <color name="colorPrimary">#0F0C29</color>
+    <color name="colorPrimaryDark">#0F0C29</color>
     <color name="colorAccent">#D0D8D8</color>
+    <color name="darkishPurple">#302B63</color>
+    <color name="white">#FFFFFF</color>
 </resources>
