--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="uk.ac.tees.t7014713.exnihilo_chatapplication.LoginActivity">
+    tools:context="uk.ac.tees.t7014713.exnihilo_chatapplication.LoginActivity"
+    android:background="@drawable/gradient_background" >
 
     <Button
         android:id="@+id/btnGoogleLogin"
