--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="uk.ac.tees.t7014713.exnihilo_chatapplication.RegisterUserActivity">
+    tools:context="uk.ac.tees.t7014713.exnihilo_chatapplication.RegisterUserActivity"
+    android:background="@drawable/gradient_background">
 
     <TextView
         android:layout_width="match_parent"
@@ -14,7 +15,8 @@
         android:textAlignment="center"
         android:textSize="30sp"
         android:layout_marginTop="30dp"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:textColor="@color/white" />
 
     <Button
         android:layout_width="wrap_content"
@@ -33,7 +35,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/uploadImage"
-        android:hint="@string/edit_text_username_hint" />
+        android:hint="@string/edit_text_username_hint"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -44,6 +49,6 @@
         android:id="@+id/btnRegister"
         android:text="@string/finished_registering"
         android:textAlignment="center"
-        android:onClick="setupUser"/>
+        android:onClick="setupUser" />
 
 </RelativeLayout>
