--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,14 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/gradient_background" >
+    android:layout_height="match_parent" >
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="logout"
-        android:text="Logout" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:background="@drawable/gradient_background" >
 
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/profileImage"
+            android:layout_centerHorizontal="true"
+            android:background="@color/white"
+            android:layout_marginTop="60dp" />
+
+        <TextView
+            android:layout_below="@+id/profileImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Glenn McKimm"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="20dp"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="260dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/circular_background">
+
+    </RelativeLayout>
+
+</RelativeLayout>
+
+<!--
+    <ImageView
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:background="@color/white"
+    android:layout_marginTop="30dp"
+    android:layout_marginLeft="30dp"
+    android:id="@+id/profileImage" />
+
+    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Glenn McKimm"
+    android:textColor="@color/white"
+    android:textSize="20sp"
+    android:layout_below="@+id/profileImage"
+    android:layout_marginTop="5dp"
+    android:layout_marginLeft="30dp"/>
+-->
