--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -4,6 +4,6 @@
     <gradient
         android:angle="270"
         android:startColor="@color/colorPrimary"
-        android:endColor="@color/darkishPurple"/>
+        android:endColor="@color/colorDarkishPurple"/>
 
 </shape>
