--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -15,30 +16,43 @@
             android:layout_height="100dp"
             android:id="@+id/profileImage"
             android:layout_centerHorizontal="true"
-            android:background="@color/white"
+            android:background="@drawable/circular_image_background"
             android:layout_marginTop="60dp" />
 
         <TextView
             android:layout_below="@+id/profileImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Glenn McKimm"
+            android:text="Users name here"
             android:textSize="20sp"
-            android:textColor="@color/white"
+            android:textColor="@color/colorWhite"
             android:textAlignment="center"
             android:layout_centerHorizontal="true"
             android:layout_margin="20dp"/>
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <android.support.design.widget.TabLayout
         android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="260dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="255dp"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/circular_background">
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        android:id="@+id/tabsId"
+        app:tabTextColor="#000"
+        app:tabIndicatorColor="#000"
+        app:tabSelectedTextColor="@color/colorStone"
+        android:background="@drawable/circular_background"/>
 
-    </RelativeLayout>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tabsId"
+        android:id="@+id/viewPagerId" >
+
+    </android.support.v4.view.ViewPager>
+
 
 </RelativeLayout>
 
