--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#0F0C29</color>
     <color name="colorPrimaryDark">#0F0C29</color>
     <color name="colorAccent">#D0D8D8</color>
-    <color name="darkishPurple">#302B63</color>
-    <color name="white">#FFFFFF</color>
-    <color name="background">#FF0000</color>
+    <color name="colorDarkishPurple">#302B63</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorStone"></color>
 </resources>
