--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="uk.ac.tees.t7014713.exnihilo_chatapplication.MainActivity"
-    android:background="@drawable/gradient_background" >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="100sp"
-        android:textAlignment="center"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context="uk.ac.tees.t7014713.exnihilo_chatapplication.MainActivity" >
 
     <Button
         android:layout_width="wrap_content"
@@ -26,5 +13,25 @@
         android:id="@+id/btnUser"
         android:text="User"
         app:layout_constraintBottom_toBottomOf="parent" />
+
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        android:id="@+id/tabsId"
+        app:tabTextColor="@color/colorWhite"
+        app:tabIndicatorColor="@color/colorWhite"
+        app:tabSelectedTextColor="@color/colorStone"
+        android:background="@drawable/gradient_background"/>
+
+    <android.support.v4.view.ViewPager
+        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/viewPagerId" >
+
+    </android.support.v4.view.ViewPager>
 
 </android.support.constraint.ConstraintLayout>
