--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -48,7 +48,6 @@
         android:layout_marginTop="50dp"
         android:id="@+id/btnRegister"
         android:text="@string/finished_registering"
-        android:textAlignment="center"
-        android:onClick="setupUser" />
+        android:textAlignment="center" />
 
 </RelativeLayout>
