--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -23,12 +23,13 @@
             android:layout_below="@+id/profileImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Users name here"
+            android:text="username"
+            android:id="@+id/profileUsername"
             android:textSize="20sp"
             android:textColor="@color/colorWhite"
             android:textAlignment="center"
             android:layout_centerHorizontal="true"
-            android:layout_margin="20dp"/>
+            android:layout_margin="20dp" />
 
     </RelativeLayout>
 
