--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="350dp"
-    android:layout_height="match_parent"
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
     android:padding="8dp" >
 
     <ImageView
@@ -15,8 +15,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/profileImage"
-        android:layout_marginLeft="5dp"
+        android:layout_toEndOf="@id/profileImage"
+        android:layout_marginStart="5dp"
         android:text="Hello"
         android:id="@+id/showMessage"
         android:textSize="18sp"
