Added a way to search for users and changed the design

--- a/app/src/main/res/drawable/circular_image_background_white.xml
+++ b/app/src/main/res/drawable/circular_image_background_white.xml
@@ -10,6 +10,6 @@
         android:radius="30dp" />
 
     <solid
-        android:color="@color/colorPrimary" />
+        android:color="?android:colorBackground" />
 
 </shape>
