--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="uk.ac.tees.t7014713.exnihilo_chatapplication.MainActivity" >
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnUser"
-        android:text="User"
-        app:layout_constraintBottom_toBottomOf="parent" />
+    tools:context="uk.ac.tees.t7014713.exnihilo_chatapplication.MainActivity"
+    android:background="@drawable/main_background" >
 
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
@@ -23,8 +17,7 @@
         android:id="@+id/tabsId"
         app:tabTextColor="@color/colorWhite"
         app:tabIndicatorColor="@color/colorWhite"
-        app:tabSelectedTextColor="@color/colorStone"
-        android:background="@drawable/gradient_background"/>
+        app:tabSelectedTextColor="@color/colorStone" />
 
     <android.support.v4.view.ViewPager
         android:layout_marginTop="50dp"
@@ -34,4 +27,14 @@
 
     </android.support.v4.view.ViewPager>
 
-</android.support.constraint.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/btnUser"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@null"
+        android:src="@drawable/ic_user"
+        android:text="User"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp" />
+
+</RelativeLayout>
