--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/toolbar"
-            android:background="@drawable/gradient_background" >
+            android:background="@color/colorPrimary" >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -48,7 +48,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/gradient_background"
+        android:background="@color/colorPrimary"
         android:padding="5dp"
         android:layout_alignParentBottom="true"
         android:id="@+id/bottom" >
