--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -9,14 +9,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:background="@drawable/gradient_background" >
+        android:background="@color/colorPrimary" >
 
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:id="@+id/profileImage"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/circular_image_background"
+            android:background="@drawable/circular_image_background_white"
             android:layout_marginTop="60dp" />
 
         <TextView
