--- a/app/src/main/res/layout/item_chat_user.xml
+++ b/app/src/main/res/layout/item_chat_user.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:padding="10dp"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp" >
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/profileImage"
-        android:backgroundTint="@color/colorPrimary"
         android:background="@drawable/circular_image_background" />
 
     <TextView
@@ -18,6 +18,7 @@
         android:text="username"
         android:id="@+id/username"
         android:textSize="18sp"
+        android:textColor="@color/colorWhite"
         android:layout_toRightOf="@+id/profileImage"
         android:layout_toEndOf="@+id/profileImage"
         android:layout_marginStart="15dp"
