--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -37,39 +37,80 @@
         android:layout_below="@+id/app_bar_layout"
         android:layout_above="@+id/bottom" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/openGallery"
-        android:layout_below="@+id/recycler_view"
-        android:layout_marginStart="200dp"
-        android:text="Upload Image"/>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:padding="5dp"
         android:layout_alignParentBottom="true"
-        android:id="@+id/bottom" >
+        android:id="@+id/bottom"
+        android:padding="5dp" >
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtSend"
-            android:hint="Send a message"
-            android:textColorHint="@color/colorWhite"
-            android:backgroundTint="@color/colorWhite"
-            android:layout_toLeftOf="@+id/btnSend"
-            android:layout_centerVertical="true" />
-         
         <ImageButton
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/btnSend"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true" />
+            android:textColor="@color/colorWhite"
+            android:id="@+id/choice"
+            android:background="@null"
+            android:src="@drawable/ic_wheel" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/choice" >
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:id="@+id/txtSend"
+                android:hint="Send a message"
+                android:textColorHint="@color/colorWhite"
+                android:backgroundTint="@color/colorWhite"
+                android:layout_toStartOf="@+id/btnSend"
+                android:layout_centerVertical="true" />
+
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/btnSend"
+                android:layout_alignParentEnd="true"
+                android:background="@null"
+                android:src="@drawable/ic_send" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:text="Gifs"
+                android:id="@+id/btnGifs"
+                android:visibility="gone"
+                android:background="@color/colorWhite"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginStart="20dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:text="Camera"
+                android:id="@+id/btnCamera"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:visibility="gone"
+                android:background="@color/colorWhite"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginEnd="20dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:text="Gallery"
+                android:id="@+id/btnGallery"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="20dp"
+                android:visibility="gone"
+                android:background="@color/colorWhite"
+                android:textColor="@color/colorPrimary" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
-    
+
 </RelativeLayout>
