--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -7,9 +7,8 @@
 
     <RelativeLayout
         android:layout_width="300dp"
-        android:layout_alignParentEnd="true"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true" >
+        android:layout_alignParentEnd="true" >
 
         <ImageView
             android:layout_width="wrap_content"
