--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -17,6 +17,13 @@
             android:id="@+id/toolbar"
             android:background="@color/colorPrimary" >
 
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/profileImage"
+                android:background="@drawable/circular_image_background"
+                android:layout_marginStart="2dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
