--- a/app/src/main/res/layout/fragment_chat_users.xml
+++ b/app/src/main/res/layout/fragment_chat_users.xml
@@ -17,8 +17,11 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/searchForUser" />
+        android:layout_below="@+id/searchForUser"
+        android:layout_marginBottom="70dp" />
 
 </RelativeLayout>
